feat: ✨ download snyk-lsp on startup or after 2 days [ROAD-692]
* chore: associate with python content type, reorder them in plugin.xml [ROAD-692]

* feat: ✨ download snyk-lsp on startup or after 2 days [ROAD-692]

* fix: 🐛 [wip] build & tests [ROAD-692]

* fix: build updates

* fix: wip - only start ls when download finished

* add eclipse classpath file

* fix: tests are now executed

* make tests runnable

* fix: update .gitignore

* chore: cache dependencies

* fix: try to fix windows file creation errors in tests

* fix: use http status to quit download job early, more sync

* fix: tests

* fix: ignores

* chore: remove package target from mvn build in github workflow